--- a/contato/templates/contato/contato.html
+++ b/contato/templates/contato/contato.html
@@ -22,14 +22,28 @@
     <main class="bg-light">
       <div class="container-fluid">
         <div class="row justify-content-center">
-          <div class="col-xl-8">
+          <div class="col-xl-5 col-md-6">
+
+            <form method="post" action="{% url 'mensagem' %}">
+              {% csrf_token %}
+              <div class="card border-0 px-sm-0 p-md-5 mt-3">
+                <div class="card-header bg-white border-0">
+                  <h1 class="text-success text-center">Contato</h1>
+                </div>
+                {{ form }}
+                <div class="card-footer p-0 pt-3 bg-white border-0">
+                  <button class="btn btn-success col-12">Enviar mensagem</button>
+                </div>
+              </div>
+
+            </form> 
 
           </div>
         </div>
       </div>
     </main>
 
-    {% include 'blog/fragments/footer.html' with var_position="fixed-bottom" %}
+    {% include 'blog/fragments/footer.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
